# Financial-Intelligence-Assistant

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
data/queries/: queries.parquet
docs/: live_demo_script.md  presentation_deck.md  project2_final_report.md
requirements/: base.txt  dev.txt  lock.txt
scripts/: __init__.py  build_retrieval_index.py  run_chunk_embeddings.py  run_chunking.py  run_competitor_analysis.py  run_entity_extraction.py  run_evaluation_pipeline.py  run_financebench_loader.py  run_financial_agent.py  run_ingestion.py  run_judge.py  run_metrics.py  run_pdf_extraction.py  run_pipeline.py  run_query_embeddings.py  run_rag_demo.py  run_retrieval_tests.py  run_security_eval.py  run_text_cleaning.py  run_triplet_extraction.py  verify_reproducibility.py
src/agent/: tools.py  workflow.py
src/common/: grounded_qa.py  guardrails.py  io.py  prompting.py
src/embeddings/: cache.py  embed_chunks.py  embed_queries.py
src/evaluation/: evaluation_pipeline.py  financebench_loader.py  judge.py  metrics.py  security_eval.py
src/extraction/: checkpoints.py  entity_extractor.py  (+3 more)
tests/: test_agent_workflow.py  test_chunking.py  test_client.py  test_common_utils.py  test_embedding_cache.py  test_evaluation_pipeline.py  test_extraction_checkpoints.py  test_financebench_loader.py  test_judge.py  test_llm_client_unit.py  test_metrics.py  test_pipeline_ordering.py  test_prompting.py  test_retrieval_modes.py  test_retrieval_uploaded_documents.py  test_run_pipeline.py  test_security_eval.py  test_uploaded_documents.py
(+12 files in other folders)
